--- a/Umma_Prayer_App_Sentiment_Analysis.ipynb
+++ b/Umma_Prayer_App_Sentiment_Analysis.ipynb
@@ -28,11 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Umma Prayer App Sentiment Analysis**\n",
-        "\n",
-        "Pada proyek ini, kita akan melakukan analisis sentimen terhadap ulasan dan pendapat pengguna terkait aplikasi \"UMMA\" di Play Store. Analisis sentimen akan membantu kita untuk memahami bagaimana pengguna merasakan dan mengungkapkan pandangan mereka terhadap aplikasi ini.\n",
-        "\n",
-        "Dengan menggunakan berbagai teknik pemrosesan teks dan algoritma machine learning, kita akan mencoba mengidentifikasi apakah ulasan pengguna terhadap aplikasi \"UMMA\" cenderung positif, negatif, atau netral. Hasil analisis sentimen ini dapat memberikan wawasan berharga kepada pengembang aplikasi untuk meningkatkan pengalaman pengguna. Mari kita mulai menjelajahi ulasan pengguna dan menganalisis sentimen di sekitar aplikasi \"UMMA\" dengan lebih mendalam."
+        "#**Umma Prayer App Sentiment Analysis**"
       ],
       "metadata": {
         "id": "y3-uEqMi9_gQ"
@@ -58,15 +54,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pGFzMazlFcE6",
-        "outputId": "60305676-7da5-4075-85d3-772cd4de2989"
+        "outputId": "1cf3a755-9a53-4308-a6ba-d82678944770"
       },
-      "execution_count": 22,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: google-play-scraper in /usr/local/lib/python3.12/dist-packages (1.2.7)\n"
+            "Requirement already satisfied: google-play-scraper in /usr/local/lib/python3.12/dist-packages (1.2.7)\n",
+            "Requirement already satisfied: sastrawi in /usr/local/lib/python3.12/dist-packages (1.0.1)\n"
           ]
         }
       ]
@@ -80,7 +77,7 @@
       "metadata": {
         "id": "GiYherKbOuQw"
       },
-      "execution_count": 23,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -97,32 +94,37 @@
         "import datetime as dt  # Manipulasi data waktu dan tanggal\n",
         "import re  # Modul untuk bekerja dengan ekspresi reguler\n",
         "import string  # Berisi konstanta string, seperti tanda baca\n",
+        "\n",
+        "import nltk  # Import pustaka NLTK (Natural Language Toolkit).\n",
+        "nltk.download('punkt')  # Mengunduh dataset yang diperlukan untuk tokenisasi teks.\n",
+        "nltk.download('stopwords')  # Mengunduh dataset yang berisi daftar kata-kata berhenti (stop words) dalam berbagai bahasa.\n",
+        "nltk.download('punkt_tab') # Mengunduh dataset yang diperlukan untuk tokenisasi teks bahasa Indonesia.\n",
         "from nltk.tokenize import word_tokenize  # Tokenisasi teks\n",
         "from nltk.corpus import stopwords  # Daftar kata-kata berhenti dalam teks\n",
         "\n",
         "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory  # Stemming (penghilangan imbuhan kata) dalam bahasa Indonesia\n",
         "from Sastrawi.StopWordRemover.StopWordRemoverFactory import StopWordRemoverFactory  # Menghapus kata-kata berhenti dalam bahasa Indonesia\n",
-        "from wordcloud import WordCloud  # Membuat visualisasi berbentuk awan kata (word cloud) dari teks\n",
-        "\n",
-        "import nltk  # Import pustaka NLTK (Natural Language Toolkit).\n",
-        "nltk.download('punkt')  # Mengunduh dataset yang diperlukan untuk tokenisasi teks.\n",
-        "nltk.download('stopwords')  # Mengunduh dataset yang berisi daftar kata-kata berhenti (stop words) dalam berbagai bahasa.\n",
-        "nltk.download('punkt_tab') # Mengunduh dataset yang diperlukan untuk tokenisasi teks bahasa Indonesia."
+        "from wordcloud import WordCloud  # Membuat visualisasi berbentuk awan kata (word cloud) dari teks\n"
       ],
       "metadata": {
         "id": "N-gVREDij2jV",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cefe1179-1fe9-4f23-c2dc-661467c67078"
+        "outputId": "6214175e-ddeb-47ed-ba47-0f40ccd232fd"
       },
-      "execution_count": 24,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "Requirement already satisfied: sastrawi in /usr/local/lib/python3.12/dist-packages (1.0.1)\n"
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
           ]
         }
       ]
@@ -155,7 +157,7 @@
       "metadata": {
         "id": "GTy8liYBQD3p"
       },
-      "execution_count": 26,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -173,7 +175,7 @@
       "metadata": {
         "id": "S4oRwFULn9b8"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,31 +190,46 @@
     {
       "cell_type": "code",
       "source": [
+        "# Mengubah data hasil scraping menjadi dataframe\n",
         "app_reviews_df = pd.DataFrame(scrapreview)\n",
         "app_reviews_df.shape\n",
-        "app_reviews_df.head()\n",
         "app_reviews_df.to_csv('ulasan_aplikasi.csv', index=False)"
       ],
       "metadata": {
-        "id": "NSaWHCL_fmLk"
+        "id": "HPDaZ6H862X8"
       },
-      "execution_count": 28,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Membuat DataFrame dari hasil scrapreview\n",
-        "app_reviews_df = pd.DataFrame(scrapreview)\n",
+        "# Informasi dataframe, kolom dan baris\n",
+        "print(list(app_reviews_df.columns))\n",
         "\n",
-        "# Menghitung jumlah baris dan kolom dalam DataFrame\n",
-        "jumlah_ulasan, jumlah_kolom = app_reviews_df.shape\n"
+        "jumlah_ulasan, jumlah_kolom = app_reviews_df.shape\n",
+        "print(f\"Jumlah kolom: {jumlah_kolom}\")\n",
+        "print(f\"Jumlah baris: {jumlah_ulasan}\")"
       ],
       "metadata": {
-        "id": "QPdI5SaGQGEI"
+        "id": "QPdI5SaGQGEI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "deff4c03-86dd-4cfd-d06f-bb56dbacc8a3"
       },
-      "execution_count": 29,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['reviewId', 'userName', 'userImage', 'content', 'score', 'thumbsUpCount', 'reviewCreatedVersion', 'at', 'replyContent', 'repliedAt', 'appVersion']\n",
+            "Jumlah kolom: 11\n",
+            "Jumlah baris: 79209\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -228,7 +245,7 @@
         },
         "outputId": "5e05475e-9a9c-4fa3-fa8e-821b941a6ac5"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -604,7 +621,7 @@
         },
         "outputId": "70bc2316-bb4c-44f1-dcea-575080d8272c"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,57 +650,13 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "# Membuat DataFrame baru (clean_df) dengan menghapus baris yang memiliki nilai yang hilang (NaN) dari app_reviews_df\n",
-        "clean_df = app_reviews_df.dropna()"
+        "## Data Cleaning"
       ],
       "metadata": {
-        "id": "K1O6pOHwZ2gR"
-      },
-      "execution_count": 32,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Menampilkan informasi tentang DataFrame clean_df setelah membersihkan nilai yang hilang (NaN)\n",
-        "clean_df.info()"
-      ],
-      "metadata": {
-        "id": "xQydMYNNgzWX",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b75ddd7f-aa4b-4701-fe24-64f79a073801"
-      },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "Index: 25214 entries, 13 to 69666\n",
-            "Data columns (total 11 columns):\n",
-            " #   Column                Non-Null Count  Dtype         \n",
-            "---  ------                --------------  -----         \n",
-            " 0   reviewId              25214 non-null  object        \n",
-            " 1   userName              25214 non-null  object        \n",
-            " 2   userImage             25214 non-null  object        \n",
-            " 3   content               25214 non-null  object        \n",
-            " 4   score                 25214 non-null  int64         \n",
-            " 5   thumbsUpCount         25214 non-null  int64         \n",
-            " 6   reviewCreatedVersion  25214 non-null  object        \n",
-            " 7   at                    25214 non-null  datetime64[ns]\n",
-            " 8   replyContent          25214 non-null  object        \n",
-            " 9   repliedAt             25214 non-null  datetime64[ns]\n",
-            " 10  appVersion            25214 non-null  object        \n",
-            "dtypes: datetime64[ns](2), int64(2), object(7)\n",
-            "memory usage: 2.3+ MB\n"
-          ]
-        }
-      ]
+        "id": "NuDqa6I79qAX"
+      }
     },
     {
       "cell_type": "code",
@@ -697,7 +670,19 @@
       "metadata": {
         "id": "u_wloGpJiVce"
       },
-      "execution_count": 34,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Membuat DataFrame baru (clean_df) dengan menghapus baris yang memiliki nilai yang hilang (NaN) dari app_reviews_df\n",
+        "clean_df = app_reviews_df.dropna()"
+      ],
+      "metadata": {
+        "id": "K1O6pOHwZ2gR"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -793,7 +778,7 @@
       "metadata": {
         "id": "Dlz8X3I6g3uU"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -816,7 +801,7 @@
       "metadata": {
         "id": "jA5BnScynn2h"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +838,7 @@
         },
         "outputId": "d86a808a-1e2f-4bb9-88b0-7e5e0e027fcf"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1527,7 +1512,7 @@
       "metadata": {
         "id": "1vJJCUl7Ksbe"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1575,7 +1560,7 @@
       "metadata": {
         "id": "X4P2DFmmiy6Z"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": []
     },
     {
