Data Labelling & Visualisasi WordCloud

--- a/Umma_Prayer_App_Sentiment_Analysis.ipynb
+++ b/Umma_Prayer_App_Sentiment_Analysis.ipynb
@@ -744,16 +744,26 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pGFzMazlFcE6",
-        "outputId": "a534b9d3-9e2f-4194-8ce8-a10fccf7b10e"
+        "outputId": "32ce729b-c2fb-46a3-cd94-e185cef6406d"
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: google-play-scraper in /usr/local/lib/python3.12/dist-packages (1.2.7)\n",
-            "Requirement already satisfied: sastrawi in /usr/local/lib/python3.12/dist-packages (1.0.1)\n",
+            "Collecting google-play-scraper\n",
+            "  Downloading google_play_scraper-1.2.7-py3-none-any.whl.metadata (50 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/50.2 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.2/50.2 kB\u001b[0m \u001b[31m2.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading google_play_scraper-1.2.7-py3-none-any.whl (28 kB)\n",
+            "Installing collected packages: google-play-scraper\n",
+            "Successfully installed google-play-scraper-1.2.7\n",
+            "Collecting sastrawi\n",
+            "  Downloading Sastrawi-1.0.1-py2.py3-none-any.whl.metadata (909 bytes)\n",
+            "Downloading Sastrawi-1.0.1-py2.py3-none-any.whl (209 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m209.7/209.7 kB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: sastrawi\n",
+            "Successfully installed sastrawi-1.0.1\n",
             "Requirement already satisfied: nltk in /usr/local/lib/python3.12/dist-packages (3.9.1)\n",
             "Requirement already satisfied: click in /usr/local/lib/python3.12/dist-packages (from nltk) (8.2.1)\n",
             "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (from nltk) (1.5.2)\n",
@@ -761,7 +771,7 @@
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.12/dist-packages (from nltk) (4.67.1)\n",
             "Collecting swifter\n",
             "  Downloading swifter-1.4.0.tar.gz (1.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m31.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.2/1.2 MB\u001b[0m \u001b[31m15.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: pandas>=1.0.0 in /usr/local/lib/python3.12/dist-packages (from swifter) (2.2.2)\n",
             "Requirement already satisfied: psutil>=5.6.6 in /usr/local/lib/python3.12/dist-packages (from swifter) (5.9.5)\n",
@@ -783,7 +793,7 @@
             "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.12/dist-packages (from python-dateutil>=2.8.2->pandas>=1.0.0->swifter) (1.17.0)\n",
             "Building wheels for collected packages: swifter\n",
             "  Building wheel for swifter (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for swifter: filename=swifter-1.4.0-py3-none-any.whl size=16505 sha256=cc10f48b1fe6dcef484e03b88a8cce4070b1333db2300314da6d412e02d66774\n",
+            "  Created wheel for swifter: filename=swifter-1.4.0-py3-none-any.whl size=16505 sha256=2a9de6b27743af10fb0b7ce28b298fd12e63fc4092775d1f5616d84ac98db97a\n",
             "  Stored in directory: /root/.cache/pip/wheels/d9/31/ff/ff51141a088571a9f672449e5aad5ea8bb35ca5d95ba135f30\n",
             "Successfully built swifter\n",
             "Installing collected packages: swifter\n",
@@ -845,18 +855,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "817be32a-5dd4-40c7-d347-79ef8c84d13b"
+        "outputId": "9cc4f93f-96ba-4fca-8b54-e4dc0402b1fd"
       },
-      "execution_count": 30,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ]
         },
         {
